FinancingRole neds to handle Bill and Payment